<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:text="@string/login_title"
        android:textColor="#fff"
        android:textSize="26sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <LinearLayout
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:paddingTop="30dp">

               <android.support.design.widget.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

                   <AutoCompleteTextView
                       android:id="@+id/email"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/prompt_email"
                       android:inputType="textEmailAddress"
                       android:maxLines="1"
                       android:drawableLeft="@drawable/ic_gmail"
                       android:singleLine="true"
                       />

               </android.support.design.widget.TextInputLayout>

               <android.support.design.widget.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

                   <EditText
                       android:id="@+id/password"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/prompt_password"
                       android:imeActionId="@+id/login"
                       android:imeActionLabel="@string/action_sign_in_short"
                       android:imeOptions="actionUnspecified"
                       android:inputType="textPassword"
                       android:maxLines="1"
                       android:drawableLeft="@drawable/ic_key_variant"
                       android:singleLine="true"
                       />

               </android.support.design.widget.TextInputLayout>

               <Switch
                   android:layout_marginTop="10dp"
                   android:text="@string/text_remember"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/switch_remember"
                   android:gravity="start" />


               <Button
                   android:id="@+id/email_sign_in_button"
                   style="@style/Base.Widget.AppCompat.Button.Colored"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="22dp"
                   android:drawableTop="@drawable/ic_login"
                   android:text="@string/action_sign_in"
                   android:textStyle="bold" />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="right"
                   android:paddingTop="5dp"
                   android:text="@string/forgot_password" />


           </LinearLayout>
       </ScrollView>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/login_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:elevation="4dp"
        android:background="@android:color/transparent"
        android:src="@drawable/teacher"
        android:scaleType="fitXY" />
</RelativeLayout>

